--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Addictofilms
-spring.datasource.url=jdbc:mysql://localhost:3306/addictofilms_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/addictofilms?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Wayan071010
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
