--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 spring.application.name=Addictofilms
 spring.datasource.url=jdbc:mysql://localhost:3306/addictofilms?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=Wayan071010
+spring.datasource.username=wild_instructor
+spring.datasource.password=peacepilou
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.sql.init.mode=always
 logging.level.org.springframework.jdbc.core=DEBUG
-
 spring.sql.init.continue-on-error=true
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+
+# To handle 404 errors
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
