--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,27 @@
 			<artifactId>snakeyaml</artifactId>
 			<version>2.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+        <dependency>
+            <groupId>com.visiotech</groupId>
+            <artifactId>addictofilms</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+		<dependency>
+			<groupId>me.paulschwarz</groupId>
+			<artifactId>spring-dotenv</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+        <!-- Commentaire : Dépendance supprimée temporairement -->
+		<!--
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+        -->
 	</dependencies>
 
 	<build>
