--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Addictofilms
 spring.datasource.url=jdbc:mysql://localhost:3306/addictofilms?createDatabaseIfNotExist=true
-spring.datasource.username=wild_instructor
-spring.datasource.password=peacepilou
+spring.datasource.username=root
+spring.datasource.password=Wayan071010
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.sql.init.mode=always
